fix: ingress tls

--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -19,12 +19,12 @@ spec:
     - host: hilwa.fr
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/?(.*)
+          - path: /api/
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: server-cluster-ip-service
@@ -32,12 +32,12 @@ spec:
     - host: www.hilwa.fr
       http:
         paths:
-          - path: /?(.*)
+          - path: /
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/?(.*)
+          - path: /api/
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: server-cluster-ip-service
