--- a/k8s/certificate.yaml
+++ b/k8s/certificate.yaml
@@ -1,5 +1,5 @@
   
-apiVersion: cert-manager.io/v1alpha2
+apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: hilwa-fr-tls
@@ -7,7 +7,7 @@ spec:
   secretName: secret-hilwa-fr
   issuerRef:
     name: letsencrypt-prod
-    kind: ClusterIssuer
+    kind: Issuer
   commonName: hilwa.fr
   dnsNames:
     - hilwa.fr
