--- a/k8s/ingress-service.yaml
+++ b/k8s/ingress-service.yaml
@@ -5,7 +5,7 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: 'nginx'
     nginx.ingress.kubernetes.io/use-regex: 'true'
-    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
     # UPDATE THIS LINE ABOVE
     cert-manager.io/cluster-issuer: 'letsencrypt-prod'
     nginx.ingress.kubernetes.io/ssl-redirect: 'true'
@@ -19,12 +19,12 @@ spec:
     - host: hilwa.fr
       http:
         paths:
-          - path: /
+          - path: /?(.*)
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/
+          - path: /api/?(.*)
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: server-cluster-ip-service
@@ -32,12 +32,12 @@ spec:
     - host: www.hilwa.fr
       http:
         paths:
-          - path: /
+          - path: /?(.*)
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: client-cluster-ip-service
               servicePort: 3000
-          - path: /api/
+          - path: /api/?(.*)
             # UPDATE THIS LINE ABOVE
             backend:
               serviceName: server-cluster-ip-service
