--- a/k8s/issuer.yaml
+++ b/k8s/issuer.yaml
@@ -8,4 +8,7 @@ spec:
     email: 'hammami.ahmed@gmail.com'
     privateKeySecretRef:
       name: letsencrypt-prod
-    http01: {}
+    solvers:
+    - http01:
+        ingress:
+            class: nginx
